# TrollTreasure

./: README.md  pyproject.toml
tests/: test_outcome.py
treasure/: cli.py  dungeon.py  game.py  treasure.py
treasure/agents/: __init__.py  base.py  human.py  random.py
treasure/room/: __init__.py  room.py  rooms.py  utils.py
